Fix the horizontal scroll
Set the width to 100% instead of 100vw

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,7 +12,7 @@ $grey : #aaaaaa;
 }
 
 body {
-  width: 100vw;
+  width: 100%;
   height: 90vh;
   padding: 0;
   margin: 0;
